--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pip install streamlit
-pip install ultralytics
-pip install opencv-python-headless
+streamlit
+ultralytics
+opencv-python-headless
 
